--- a/child-app-2/package.json
+++ b/child-app-2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "child-app",
+  "name": "child-app-2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "build": "webpack --mode production",
-    "build:start": "cd dist && PORT=4000 npx serve",
+    "build:start": "cd dist && PORT=4001 npx serve",
     "start": "webpack serve --open --mode development"
   },
   "eslintConfig": {
