--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "workspaces": {
     "packages": [
       "host",
-      "child"
+      "child",
+      "child2"
     ]
   },
   "scripts": {
-"start": "npm run start:host & npm run start:remote",
+"start": "npm run start:host & npm run start:remote & npm run start:remote2",
     "start:host": "cd ./host-app && npm start",
     "start:remote": "cd ./child-app && npm start",
+    "start:remote2": "cd ./child-app-2 && npm start",
     "start:all": "yarn workspaces run start",
     "cleanup": "yarn workspaces run cleanup"
   },
